--- a/_posts/2015-01-01-clue-01.markdown
+++ b/_posts/2015-01-01-clue-01.markdown
@@ -1,6 +1,6 @@
 ---
 layout: clue
 clue:  "Look up"
-permalink: site.starting_permalink
+permalink: first
 ---
 <!-- This is the first link that people go to in your treasure hunt -->
